upgrade: massminer 2.0.0 preview
