# api/server.go
@@ -4,17 +4,16 @@ import (
 	"fmt"
 	"net"
 
+	"github.com/massnetorg/mass-core/blockchain"
+	"github.com/massnetorg/mass-core/database"
+	"github.com/massnetorg/mass-core/logging"
+	"github.com/massnetorg/mass-core/netsync"
 	"google.golang.org/grpc"
 	"google.golang.org/grpc/reflection"
 	pb "massnet.org/mass/api/proto"
-	"massnet.org/mass/blockchain"
 	"massnet.org/mass/config"
-	"massnet.org/mass/database"
-	"massnet.org/mass/logging"
 	"massnet.org/mass/mining"
-	"massnet.org/mass/netsync"
-	"massnet.org/mass/poc/engine/pocminer"
-	"massnet.org/mass/poc/wallet"
+	"massnet.org/mass/version"
 )
 
 const (
@@ -23,20 +22,23 @@ const (
 )
 
 type Server struct {
-	rpcServer   *grpc.Server
-	db          database.Db
-	config      *config.Config
-	pocMiner    pocminer.PoCMiner
-	spaceKeeper mining.SpaceKeeper
-	chain       *blockchain.Blockchain
-	txMemPool   *blockchain.TxPool
-	syncManager *netsync.SyncManager
-	pocWallet   *wallet.PoCWallet
-	quitClient  func()
+	rpcServer     *grpc.Server
+	config        *config.API
+	db            database.Db
+	chain         *blockchain.Blockchain
+	txMemPool     *blockchain.TxPool
+	syncManager   *netsync.SyncManager
+	pocMiner      mining.PoCMiner
+	pocWallet     mining.PoCWallet
+	spaceKeeperV1 mining.SpaceKeeperV1
+	spaceKeeperV2 mining.SpaceKeeperV2
+	serviceMode   version.ServiceMode
+	quitClient    func()
 }
 
-func NewServer(db database.Db, pocMiner pocminer.PoCMiner, spaceKeeper mining.SpaceKeeper, chain *blockchain.Blockchain,
-	txMemPool *blockchain.TxPool, sm *netsync.SyncManager, pocWallet *wallet.PoCWallet, quitClient func(), config *config.Config) (*Server, error) {
+func NewServer(cfg *config.API, db database.Db, chain *blockchain.Blockchain, txMemPool *blockchain.TxPool, sm *netsync.SyncManager,
+	pocMiner mining.PoCMiner, pocWallet mining.PoCWallet, spaceKeeperV1 mining.SpaceKeeperV1, spaceKeeperV2 mining.SpaceKeeperV2,
+	serviceMode version.ServiceMode, quitClient func()) (*Server, error) {
 	// set the size for receive Msg
 	opts := []grpc.ServerOption{
 		grpc.MaxRecvMsgSize(maxMsgSize),
@@ -44,34 +46,36 @@ func NewServer(db database.Db, pocMiner pocminer.PoCMiner, spaceKeeper mining.Sp
 	}
 	s := grpc.NewServer(opts...)
 	srv := &Server{
-		rpcServer:   s,
-		db:          db,
-		config:      config,
-		pocMiner:    pocMiner,
-		spaceKeeper: spaceKeeper,
-		chain:       chain,
-		txMemPool:   txMemPool,
-		syncManager: sm,
-		pocWallet:   pocWallet,
-		quitClient:  quitClient,
+		rpcServer:     s,
+		config:        cfg,
+		db:            db,
+		chain:         chain,
+		txMemPool:     txMemPool,
+		syncManager:   sm,
+		pocMiner:      pocMiner,
+		pocWallet:     pocWallet,
+		spaceKeeperV1: spaceKeeperV1,
+		spaceKeeperV2: spaceKeeperV2,
+		serviceMode:   serviceMode,
+		quitClient:    quitClient,
 	}
 	pb.RegisterApiServiceServer(s, srv)
 	// Register reflection service on gRPC server.
 	reflection.Register(s)
 
-	logging.CPrint(logging.INFO, "new gRPC server")
+	logging.CPrint(logging.INFO, "new api server")
 	return srv, nil
 }
 
 func (s *Server) Start() error {
-	address := fmt.Sprintf("%s%s%s", GRPCListenAddress, ":", s.config.Network.API.APIPortGRPC)
+	address := fmt.Sprintf("%s:%d", GRPCListenAddress, s.config.PortGRPC)
 	listen, err := net.Listen("tcp", address)
 	if err != nil {
-		logging.CPrint(logging.ERROR, "failed to start tcp listener", logging.LogFormat{"port": s.config.Network.API.APIPortGRPC, "error": err})
+		logging.CPrint(logging.ERROR, "failed to start tcp listener", logging.LogFormat{"port": s.config.PortGRPC, "err": err})
 		return err
 	}
 	go s.rpcServer.Serve(listen)
-	logging.CPrint(logging.INFO, "gRPC server start", logging.LogFormat{"port": s.config.Network.API.APIPortGRPC})
+	logging.CPrint(logging.INFO, "gRPC server start", logging.LogFormat{"port": s.config.PortGRPC})
 	return nil
 }
 
@@ -83,8 +87,8 @@ func (s *Server) Stop() {
 func (s *Server) RunGateway() {
 	go func() {
 		if err := Run(s.config); err != nil {
-			logging.CPrint(logging.ERROR, "failed to start gateway", logging.LogFormat{"port": s.config.Network.API.APIPortHttp, "error": err})
+			logging.CPrint(logging.ERROR, "failed to start gateway", logging.LogFormat{"port": s.config.PortHttp, "err": err})
 		}
 	}()
-	logging.CPrint(logging.INFO, "gRPC-gateway start", logging.LogFormat{"port": s.config.Network.API.APIPortHttp})
+	logging.CPrint(logging.INFO, "gRPC-gateway start", logging.LogFormat{"port": s.config.PortHttp})
 }
